--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 .jumbotron{
-    background-image: url("../img/860x394.jpg");
-    height: 394px;
+    background-image: url("../img/jongsun-lee-F-pSZO_jeE8-unsplash.jpg");
+    height: 675px;
+    background-repeat: no-repeat;
+    background-position: center;
+    align-content: center;
 }
